--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start":"node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,5 +23,5 @@
     "node-fetch": "^3.0.0",
     "nodemon": "^2.0.12"
   },
-  "type": "module"
+  "type": "module" 
 }
